Trying to correct some scaling issues on mobile version

--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: #073b4c;
     font-family: "Roboto", sans-serif;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    position: relative;
 }
 
 .container {
@@ -318,7 +324,7 @@ body {
     font-family: "Fredoka One", cursive;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
     .game-board {
         height: 22rem;
         width: 22rem;
